--- a/runforcream/index.html
+++ b/runforcream/index.html
@@ -3,3 +3,8 @@ layout: default
 ---
 
 <embed width="800" height="450" wmode="transparent" src="/assets/runforcream.swf"></embed>
+<h3>Instructions</h3>
+<p><strong>Tomato keys:</strong> A and D for direction, W for jump.</p>
+<p><strong>Grape keys:</strong> Arrows.</p>
+<p><strong>Lemon keys:</strong> O and P for direction, I for jump.</p>
+<p><strong>Kiwi keys:</strong> B and N for direction, V for jump.</p>
