--- a/runforcream/index.html
+++ b/runforcream/index.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-<embed width="600" height="450" wmode="transparent" src="/assets/runforcream.swf"></embed>
+<div id="post-content-asset">
+  <embed width="600" height="338" wmode="transparent" src="/assets/runforcream.swf"></embed>
+</div>
+
 <h3>Instructions</h3>
 <p><strong>Tomato keys:</strong> A and D for direction, W for jump.</p>
 <p><strong>Grape keys:</strong> Arrows.</p>
