--- a/bulletboids/index.html
+++ b/bulletboids/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <div id="project-description">
   <h3>Project description</h3>
-  <p>This project uses the <a href="http://bulletphysics.org/wordpress">Bullet Physics engine</a> and implement an AI algorithm illustrating flocking.
+  <p>This project uses the <a href="http://bulletphysics.org/wordpress">Bullet Physics engine</a> and implements an AI algorithm illustrating flocking.
   Three simple steering behaviours have to be applied to describe how an individual boid maneuvers: <strong>separation</strong>, <strong>alignment</strong> and <strong>cohesion</strong>. Regarding the bird behaviours, three physical principles have been followed: <strong>thurst</strong>, <strong>lift</strong> and <strong>drag</strong>.
   <p>Furthermore, the flock is always trying to avoid static obstacles placed across the world, while the camera is finding the leader of the flock in order to follow it.</p>
   <p><em>Music: Air - Mer du Japon</em></p>
