--- a/projects/index.html
+++ b/projects/index.html
@@ -10,10 +10,11 @@ description: London based game developer
 			<a href="{{ project.link }}"><img src="{{ project.image }}" class="project-image"></a>
 			<div class="project-content">
 				<h2 class="project-title"><a href="{{ project.link }}">{{ project.name }}</a></h2>
+        <span class="project-info">{{ project.language }}, </span>
 				{% if project.folder == "Archived" %}
-	            	<span class="project-info">{{ project.folder }}, </span>
+	            <span class="project-info">{{ project.folder }}, </span>
 				{% endif %}
-	            <span class="project-info">{{ project.status }}</span>
+              <span class="project-info">{{ project.status }}</span>
 	            <div class="excerpt"><p>{{ project.description }}</p></div>
 	        </div>
         </div>
